# cloud-libs

./: .clang-format  CMakeLists.txt  readme.md
cecs/: CMakeLists.txt
cecs/example/: test_with_go.cpp
cecs/src/: CMakeLists.txt
cecs/src/private/: archetype.cpp  archetype.h  archetype_manager.cpp  bitbool.h  bittool.cpp  component_manager.cpp  component_manager.h  entity.cpp  meta_type.h  registry.cpp  registry.inc
cecs/src/public/: define.h  entity.h  registry.h
cecs/src/public/temp/: meta_function_detail.inl  selector.h  view.h
cjob/example/: CMakeLists.txt  main.cpp
cjob/src/: CMakeLists.txt
cjob/src/private/: counter.cpp  job.cpp  job_builder.cpp  job_counter_entry.cpp  job_counter_entry.h  job_queue.cpp  job_system.cpp  job_system_exporter.h  job_system_extension.cpp  job_system_extension.h  job_​scheduler.h  worker_threads.cpp  worker_threads.h
cjob/src/public/: countable.h  counter.h  icounter.h  job.h  job_builder.h  job_define.h  job_system.h  job_system_exporter.h  resource_pool.h  stealable_queue.h
doc/: cecs.md  cjob.md
src/cecs/example/: CMakeLists.txt  standard_compare.cpp  test_meta_function.cpp  test_meta_function.h  test_with_go.cpp  test_with_go.h  test_world.cpp
src/cecs/src/private/: archetype.cpp  archetype_manager.cpp  bittool.cpp  chunk.cpp  component_manager.cpp  entity.cpp  entity_manager.cpp  memory.cpp  registry.cpp
src/cjob/: CMakeLists.txt
src/cjob/example/: CMakeLists.txt  main.cpp
src/cjob/src/: CMakeLists.txt
src/example/: CMakeLists.txt
src/example/example_1/: CMakeLists.txt  main.cpp
(+29 files in other folders)
