file(GLOB_RECURSE HEAD_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
file(GLOB_RECURSE SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

add_executable(TEST_CECS ${HEAD_FILES} ${SOURCE_FILES})
target_link_libraries(TEST_CECS PRIVATE CloudECS)
target_include_directories(TEST_CECS PRIVATE "${PROJECT_SOURCE_FOLDER}")







